added the google map and made sure it works relates #10

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
   <div>
-
+   <div id="map"></div>
   </div>
 </body>
 <script type="text/javascript" src="./public/dom.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9JvgnmyWXJgAVc7trIDI_XF1k3EOdtPY&callback=initMap" ></script>
 <script type="text/javascript" src="./public/logic.js"></script>
+
 </html>
