creating news api relates #16

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div>
    <div id="map"></div>
+   <div id="con"></div>
   </div>
 </body>
 <script type="text/javascript" src="./public/dom.js"></script>
