--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mashrou-Cheeta</title>
   <link rel="stylesheet" type="text/css" href="./public/style.css" />
+
 </head>
 
 <body>
   <div>
+    <h1 id="title">NewsClick</h1>
+    <h2 id="sub-title">Click anywhere on the map for news in your region </h2>
+
    <div id="map"></div>
    <div id="con"></div>
   </div>
