adjusting app instructions and deleting comments within code Ref #27 #28

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div>
     <h1 id="title">NewsClick</h1>
-    <h2 id="sub-title">Click anywhere on the map for news in your region </h2>
+    <h2 id="sub-title">Centre the map for news in that region</h2>
 
    <div id="map"></div>
    <div id="con"></div>
